<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titleViewModel"
            type="com.mashup.kkyuni.feature.writing.presentation.title.WritingTitleViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_writing_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:padding="@dimen/toolbar_back_padding"
            app:onThrottleClick="@{() -> titleViewModel.onClickedBack()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageview_emotion"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/ic_emotion_happy"
            android:layout_marginTop="152dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writing_title"
            android:layout_marginTop="36dp"
            android:textAppearance="@style/WritingTitle.title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_emotion" />

        <EditText
            android:id="@+id/edittext_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColorHint="@color/white_alpha30"
            android:textAppearance="@style/WritingTitle.hint"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/writing_title_hint"
            app:layout_constraintTop_toBottomOf="@id/textview_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/WritingTitle.count"
            android:layout_marginTop="8dp"
            android:text="@{@string/writing_title_count(titleViewModel.titleLength)}"
            app:visible="@{titleViewModel.isSetTitle()}"
            app:layout_constraintTop_toBottomOf="@id/edittext_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2/14" />

        <com.mashup.kkyuni.widget.KkyuniBottomButton
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:text="@string/bottom_button_next"
            android:layout_marginHorizontal="@dimen/bottom_button_margin_horizental"
            style="@style/KkyuniBottomButtonStyle"
            app:enabledButton="@{titleViewModel.isSetTitle()}"
            app:onThrottleClick="@{() -> titleViewModel.onClickedNext()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
